# x4companion

./: .gitignore  .gitingore  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml  schema.yml
c4x4/: eslint.config.js  package-lock.json  package.json
c4x4/src/: main.tsx  responses.ts
c4x4/src/components/: DeleteButton.tsx  Logout.tsx  SaveIndicator.tsx  SaveModal.tsx  Sectors.tsx  Sidebar.tsx  SignIn.tsx
c4x4/src/functions/: cookies.ts  responses.ts
src/tests/: conftest.py
src/tests/test_views/: test_index.py
src/tests/test_x4/: test_index.py  test_models.py  test_responses.py  test_saves.py  test_serializers.py
src/tests/test_x4/test_dataset/: test_dataset.py  test_factory_modules.py  test_habitats.py  test_habitats_modules.py  test_sector_template.py  test_ware_orders.py  test_wares.py
src/tests/test_x4/test_game/: test_saves.py  test_sectors.py  test_stations.py
src/tests/test_x4/test_habitats/: test_habitats.py
src/tests/test_x4/test_management/: conftest.py  test_load_datasets.py  test_register_datasets.py
src/tests/test_x4/test_sectors/: test_sectors.py
src/tests/test_x4/test_stations/: test_stations.py
src/tests/test_x4/test_views/test_dataset/: test_dataset.py  test_factory_modules.py  test_sector_template.py  test_ware_orders.py  test_wares.py
src/tests/test_x4/test_views/test_game/: test_factory.py  test_saves.py
src/x4companion/: __about__.py  __init__.py  asgi.py  db.sqlite3  manage.py  schema.yml  settings.py  urls.py  wsgi.py
src/x4companion/datasets/: x4_base.json
src/x4companion/x4/: __init__.py  api_bases.py  index.py  models.py  responses.py  saves.py  serializers.py  views.py
src/x4companion/x4/dataset/: dataset.py  factory_modules.py  habitat_modules.py  habitats.py  sector_templates.py  ware_orders.py  wares.py
src/x4companion/x4/game/: factory.py  habitats.py  saves.py  sectors.py  stations.py
src/x4companion/x4/habitats/: __init__.py  habitat_modules.py
src/x4companion/x4/management/: __init__.py  exceptions.py  logging.py  register_datasets.py
src/x4companion/x4/management/commands/: register_datasets.py
src/x4companion/x4/migrations/: 0001_initial.py  0002_alter_sector_name.py  0002_habitattemplate_habitat.py  0002_rename_factory_wareorder_factory_module.py  0002_sectortemplate_remove_sector_no_duplicate_sectors_and_more.py  0002_sectortemplate_sunlight_percent.py  0002_station.py  0003_rename_habitattemplate_habitatmodules.py  0003_station_no_duplicate_stations.py  0004_rename_habitatmodules_habitatmodule.py  0004_sector_no_duplicate_sectors.py  0005_dataset.py
src/x4companion/x4/sectors/: __init__.py  sectors.py
src/x4companion/x4/stations/: __init__.py  stations.py
src/x4companion/x4/views/: dataset.py  game.py
