[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "x4companion"
dynamic = ["version"]
description = 'A Companion web app for the game X4 foundations.'
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
keywords = []
authors = [
  { name = "sam", email = "samueljfry@protonmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/sam/x4companion#readme"
Issues = "https://github.com/sam/x4companion/issues"
Source = "https://github.com/sam/x4companion"

[tool.hatch.version]
path = "src/x4companion/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/x4companion tests}"

[tool.coverage.run]
source_pkgs = ["x4companion", "tests"]
branch = true
parallel = true
omit = [
  "src/x4companion/__about__.py",
]

[tool.coverage.paths]
x4companion = ["src/x4companion", "*/x4companion/src/x4companion"]
tests = ["tests", "*/x4companion/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
pydocstyle.convention = "google"
extend-select = ["ALL"]
extend-ignore = ["COM812", "ISC001"]

[tool.ruff.lint.per-file-ignores]
"__about__.py" = ["ALL"]
"tests/*" = ["D"]